--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -128,7 +128,115 @@
                 </div>
                 
                 <div class="center">
-                    <svg class="cable_SVG" width="30" height="497" viewBox="0 0 30 497" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="cable_SVG_left" width="176" height="497" viewBox="0 0 176 497" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="3-wire_thick_left">
+                        <g id="section_4">
+                        <g id="wire_3">
+                        <path id="Vector" d="M0.349636 384.635L0.349636 366.461L9.60124 378.05L16.8554 387.137L9.60124 396.225L0.349636 384.635Z" fill="black"/>
+                        <path id="Vector_2" d="M0.349636 439.158L9.60124 450.748L16.8554 441.66L9.60124 432.573L0.349636 420.984L0.349636 439.158Z" fill="black"/>
+                        <path id="Vector_3" d="M26.107 411.897L16.8554 423.486L9.60122 414.399L16.8554 405.312L26.107 393.723L26.107 411.897Z" fill="black"/>
+                        <path id="Vector_4" d="M26.107 466.42H11.5987L16.8554 459.835L26.107 448.245L26.107 466.42Z" fill="black"/>
+                        </g>
+                        <g id="wire_2">
+                        <path id="Vector_5" d="M0.349608 466.42L0.349608 457.333L7.60378 466.42H0.349608Z" fill="#0057FF"/>
+                        <path id="Vector_6" d="M26.107 393.723L26.107 375.548L16.8554 387.137L9.60122 396.225L16.8554 405.312L26.107 393.723Z" fill="#0057FF"/>
+                        <path id="Vector_7" d="M0.349636 420.984L0.349636 402.81L9.60124 414.399L16.8554 423.486L9.60124 432.573L0.349636 420.984Z" fill="#0057FF"/>
+                        <path id="Vector_8" d="M26.107 448.245L26.107 430.071L16.8554 441.66L9.60122 450.748L16.8554 459.835L26.107 448.245Z" fill="#0057FF"/>
+                        <path id="Vector_9" d="M0.349636 366.461L9.60124 378.05L16.8554 368.963L9.60124 359.876L0.349636 348.287L0.349636 366.461Z" fill="#0057FF"/>
+                        </g>
+                        <g id="wire_1">
+                        <path id="Vector_10" d="M0.349636 402.81L0.349636 384.635L9.60124 396.225L16.8554 405.312L9.60124 414.399L0.349636 402.81Z" fill="#FF0000"/>
+                        <path id="Vector_11" d="M26.107 430.071L26.107 411.897L16.8554 423.486L9.60122 432.573L16.8554 441.66L26.107 430.071Z" fill="#FF0000"/>
+                        <path id="Vector_12" d="M0.349636 457.333L0.349636 439.158L9.60124 450.748L16.8554 459.835L11.5987 466.42H7.6038L0.349636 457.333Z" fill="#FF0000"/>
+                        </g>
+                        </g>
+                        <g id="section_3">
+                        <g id="wire_3_2">
+                        <path id="Vector_13" d="M26.107 248.328L26.107 230.154L16.8554 241.743L9.60122 250.83L16.8554 259.917L26.107 248.328Z" fill="black"/>
+                        <path id="Vector_14" d="M26.107 357.374L26.107 339.2L16.8554 350.789L9.60122 359.876L16.8554 368.963L26.107 357.374Z" fill="black"/>
+                        <path id="Vector_15" d="M0.349636 275.589L9.60124 287.179L16.8554 278.092L9.60124 269.004L0.349636 257.415L0.349636 275.589Z" fill="black"/>
+                        <path id="Vector_16" d="M26.107 302.851L16.8554 314.44L9.60122 305.353L16.8554 296.266L26.107 284.677L26.107 302.851Z" fill="black"/>
+                        <path id="Vector_17" d="M0.349636 330.112L9.60124 341.702L16.8554 332.615L9.60124 323.527L0.349636 311.938L0.349636 330.112Z" fill="black"/>
+                        </g>
+                        <g id="wire_2_2">
+                        <path id="Vector_18" d="M26.107 339.2L26.107 321.025L16.8554 332.615L9.60122 341.702L16.8554 350.789L26.107 339.2Z" fill="#0057FF"/>
+                        <path id="Vector_19" d="M0.349636 257.415L9.60124 269.004L16.8554 259.917L9.60124 250.83L0.349636 239.241L0.349636 257.415Z" fill="#0057FF"/>
+                        <path id="Vector_20" d="M0.349636 311.938L9.60124 323.527L16.8554 314.44L9.60124 305.353L0.349636 293.764L0.349636 311.938Z" fill="#0057FF"/>
+                        <path id="Vector_21" d="M26.107 284.677L26.107 266.502L16.8554 278.092L9.60122 287.179L16.8554 296.266L26.107 284.677Z" fill="#0057FF"/>
+                        </g>
+                        <g id="wire_1_2">
+                        <path id="Vector_22" d="M26.107 321.025L16.8554 332.615L9.60122 323.527L16.8554 314.44L26.107 302.851L26.107 321.025Z" fill="#FF0000"/>
+                        <path id="Vector_23" d="M26.107 266.502L26.107 248.328L16.8554 259.917L9.60122 269.004L16.8554 278.092L26.107 266.502Z" fill="#FF0000"/>
+                        <path id="Vector_24" d="M0.349636 293.764L0.349636 275.589L9.60124 287.179L16.8554 296.266L9.60124 305.353L0.349636 293.764Z" fill="#FF0000"/>
+                        <path id="Vector_25" d="M0.349636 348.287L0.349636 330.112L9.60124 341.702L16.8554 350.789L9.60124 359.876L0.349636 348.287Z" fill="#FF0000"/>
+                        <path id="Vector_26" d="M26.107 375.548L16.8554 387.137L9.60122 378.05L16.8554 368.963L26.107 357.374L26.107 375.548Z" fill="#FF0000"/>
+                        </g>
+                        </g>
+                        <g id="section_2">
+                        <g id="wire_3_3">
+                        <path id="Vector_27" d="M26.107 193.805L16.8554 205.394L9.60122 196.307L16.8554 187.22L26.107 175.631L26.107 193.805Z" fill="black"/>
+                        <path id="Vector_28" d="M0.349636 221.067L9.60124 232.656L16.8554 223.569L9.60124 214.482L0.349636 202.892L0.349636 221.067Z" fill="black"/>
+                        <path id="Vector_29" d="M0.349636 166.544L0.349636 148.369L9.60124 159.959L16.8554 169.046L9.60124 178.133L0.349636 166.544Z" fill="black"/>
+                        <path id="Vector_30" d="M16.8554 132.697L26.107 121.108L26.107 139.282L16.8554 150.871L9.60122 141.784L16.8554 132.697Z" fill="black"/>
+                        <path id="Vector_31" d="M9.60124 105.436L0.349636 93.8464L0.349636 112.021L9.60124 123.61L16.8554 114.523L9.60124 105.436Z" fill="black"/>
+                        <path id="Vector_32" d="M9.60122 87.2613L16.8554 96.3484L26.107 84.7592L26.107 66.5848L16.8554 78.1741L9.60122 87.2613Z" fill="black"/>
+                        </g>
+                        <g id="wire_2_3">
+                        <path id="Vector_33" d="M26.107 175.631L26.107 157.456L16.8554 169.046L9.60122 178.133L16.8554 187.22L26.107 175.631Z" fill="#0057FF"/>
+                        <path id="Vector_34" d="M26.107 230.154L16.8554 241.743L9.60122 232.656L16.8554 223.569L26.107 211.979L26.107 230.154Z" fill="#0057FF"/>
+                        <path id="Vector_35" d="M0.349636 202.892L0.349636 184.718L9.60124 196.307L16.8554 205.394L9.60124 214.482L0.349636 202.892Z" fill="#0057FF"/>
+                        <path id="Vector_36" d="M0.349636 148.369L9.60124 159.959L16.8554 150.871L9.60124 141.784L0.349636 130.195L0.349636 148.369Z" fill="#0057FF"/>
+                        <path id="Vector_37" d="M26.107 102.933L26.107 121.108L16.8554 132.697L9.60122 123.61L16.8554 114.523L26.107 102.933Z" fill="#0057FF"/>
+                        <path id="Vector_38" d="M16.8554 96.3484L9.60124 87.2613L0.349636 75.672L0.349636 93.8463L9.60124 105.436L16.8554 96.3484Z" fill="#0057FF"/>
+                        </g>
+                        <g id="wire_1_3">
+                        <path id="Vector_39" d="M0.349636 184.718L9.60124 196.307L16.8554 187.22L9.60124 178.133L0.349636 166.544L0.349636 184.718Z" fill="#FF0000"/>
+                        <path id="Vector_40" d="M26.107 157.456L26.107 139.282L16.8554 150.871L9.60122 159.959L16.8554 169.046L26.107 157.456Z" fill="#FF0000"/>
+                        <path id="Vector_41" d="M0.349636 239.241L0.349636 221.067L9.60124 232.656L16.8554 241.743L9.60124 250.83L0.349636 239.241Z" fill="#FF0000"/>
+                        <path id="Vector_42" d="M26.107 211.979L16.8554 223.569L9.60122 214.482L16.8554 205.394L26.107 193.805L26.107 211.979Z" fill="#FF0000"/>
+                        <path id="Vector_43" d="M0.349636 112.021L0.349636 130.195L9.60124 141.784L16.8554 132.697L9.60124 123.61L0.349636 112.021Z" fill="#FF0000"/>
+                        <path id="Vector_44" d="M26.107 84.7592L26.107 102.934L16.8554 114.523L9.60122 105.436L16.8554 96.3485L26.107 84.7592Z" fill="#FF0000"/>
+                        </g>
+                        </g>
+                        <g id="section_1">
+                        <g id="wire_3_4">
+                        <path id="Vector_45" d="M0.349636 57.4977L0.349636 39.3234L9.60124 50.9127L16.8554 59.9999L9.60124 69.087L0.349636 57.4977Z" fill="black"/>
+                        <path id="Vector_46" d="M26.107 30.2362L7.60379 30.2362L16.8554 41.8255L26.107 30.2362Z" fill="black"/>
+                        </g>
+                        <g id="wire_2_4">
+                        <path id="Vector_47" d="M26.107 66.5849L16.8554 78.1742L9.60122 69.087L16.8554 59.9999L26.107 48.4106L26.107 66.5849Z" fill="#0057FF"/>
+                        <path id="Vector_48" d="M0.349636 39.3234V30.2362L7.6038 30.2362L16.8554 41.8255L9.60124 50.9127L0.349636 39.3234Z" fill="#0057FF"/>
+                        </g>
+                        <g id="wire_1_4">
+                        <path id="Vector_49" d="M26.107 48.4105L16.8554 59.9998L9.60122 50.9127L16.8554 41.8255L26.107 30.2362L26.107 48.4105Z" fill="#FF0000"/>
+                        <path id="Vector_50" d="M0.349636 75.672L9.60124 87.2613L16.8554 78.1741L9.60124 69.0869L0.349636 57.4977L0.349636 75.672Z" fill="#FF0000"/>
+                        </g>
+                        </g>
+                        <path id="output_a" d="M-6.14256e-06 30.2362L-6.14256e-06 0L26.4567 0L26.4567 30.2362H26.107L7.60381 30.2362H0.349642H-6.14256e-06Z" fill="black"/>
+                        <path id="input_a" d="M26.107 466H11.5987H7.60381H0.349642H-6.14256e-06L-6.14256e-06 496.236H26.4567L26.4567 466H26.107Z" fill="black"/>
+                        <g id="left_connect">
+                        <path id="Vector_51" d="M82.0843 86.2425L93.6736 95.4941L84.5865 102.748L75.4993 95.4941L63.91 86.2425L82.0843 86.2425Z" fill="#00FF66"/>
+                        <path id="Vector_52" d="M148.197 95.4939L136.607 86.2424L154.782 86.2423L166.371 95.4939L157.284 102.748L148.197 95.4939Z" fill="#00FF66"/>
+                        <path id="Vector_53" d="M136.607 86.2424L148.197 95.494L139.109 102.748L130.022 95.494L118.433 86.2424L136.607 86.2424Z" fill="black"/>
+                        <path id="Vector_54" d="M91.1715 112L72.9972 112L84.5865 102.748L93.6736 95.4941L102.761 102.748L91.1715 112Z" fill="#666565"/>
+                        <path id="Vector_55" d="M139.109 102.748L130.022 95.494L120.935 102.748L109.346 112L127.52 112L139.109 102.748Z" fill="#666565"/>
+                        <path id="Vector_56" d="M36.6486 112L48.2378 102.748L39.1507 95.4942L30.0635 102.748L18.4743 112H36.6486Z" fill="black"/>
+                        <path id="Vector_57" d="M18.8355 93.7852L0.300007 112H18.4743L30.0635 102.748L18.8355 93.7852Z" fill="#666565"/>
+                        <path id="Vector_58" d="M18.8355 93.7852L26.0559 84.7374L39.1507 95.4942L30.0635 102.748L18.8355 93.7852Z" fill="black"/>
+                        <path id="Vector_59" d="M63.91 86.2425L45.7357 86.2426L57.325 95.4941L66.4122 102.748L75.4993 95.4941L63.91 86.2425Z" fill="black"/>
+                        <path id="Vector_60" d="M109.346 112L91.1715 112L102.761 102.748L111.848 95.494L120.935 102.748L109.346 112Z" fill="black"/>
+                        <path id="Vector_61" d="M139.109 102.748L127.52 112L145.694 112L157.284 102.748L148.197 95.494L139.109 102.748Z" fill="black"/>
+                        <path id="Vector_62" d="M72.9972 112L84.5865 102.748L75.4993 95.4941L66.4122 102.748L54.8229 112L72.9972 112Z" fill="black"/>
+                        <path id="Vector_63" d="M157.284 102.748L145.694 112L163.869 112L175.458 102.748L166.371 95.4939L157.284 102.748Z" fill="#666565"/>
+                        <path id="Vector_64" d="M54.8229 112L36.6486 112L48.2378 102.748L57.325 95.4941L66.4121 102.748L54.8229 112Z" fill="#666565"/>
+                        <path id="Vector_65" d="M100.259 86.2425L82.0843 86.2425L93.6736 95.4941L102.761 102.748L111.848 95.494L100.259 86.2425Z" fill="black"/>
+                        <path id="Vector_66" d="M45.7357 86.2426L26.0559 84.7374L39.1507 95.4942L48.2378 102.748L57.325 95.4942L45.7357 86.2426Z" fill="#00FF66"/>
+                        <path id="Vector_67" d="M130.022 95.494L120.935 102.748L111.848 95.494L100.259 86.2424L118.433 86.2424L130.022 95.494Z" fill="#00FF66"/>
+                        </g>
+                        </g>
+                        </svg>
+                        
+                    <svg class="cable_SVG_center" width="30" height="497" viewBox="0 0 30 497" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g id="Group 1">
                         <path id="input_a" d="M28.107 466H13.5987H9.60381H2.34964H1.99999L1.99999 496.236H28.4567L28.4567 466H28.107Z" fill="black"/>
                         <path id="output_a" d="M1.99999 30.2362L1.99999 0L28.4567 0L28.4567 30.2362H28.107L9.60381 30.2362H2.34964H1.99999Z" fill="black"/>
