--- a/FrontEndtesting/Cable Length Editor TEST/cable_length.html
+++ b/FrontEndtesting/Cable Length Editor TEST/cable_length.html
@@ -93,7 +93,7 @@
     <div class="flex-box-parent">
         <div class="total_container" data-segment-parent="total">
             
-            <div>
+            <div class="segments">
                 <div>Output Inches</div>
                 <input class="inputbox" data-segment-inches="output" type="number" min="0" max="120" step="1" value="0">
                 <div>
@@ -102,7 +102,7 @@
                 </div>    
             </div>
 
-            <div>
+            <div class="segments">
                 <div>Total Inches</div>
                 <input class="inputbox" data-total-inches="total" type="number" min="0" max="120" step="1" value="0">
                 <div>
@@ -111,7 +111,7 @@
                 </div>             
             </div>
 
-            <div>
+            <div class="segments">
                 <div>Input Inches</div>
                 <input class="inputbox" data-segment-inches="input" type="number" min="0" max="120" step="1" value="0">
                 <div>
