--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -13,8 +13,8 @@
                 <input class="search" type="text" placeholder="Search..">
             </div>
             <div class="filter_container">
-                <button type="button" class="left_btn">Request new connector</button>
-                <button type="button" class="left_btn">Filter connectors</button>
+                <button type="button" class="left_btn button">Request new connector</button>
+                <button type="button" class="left_btn button">Filter connectors</button>
             </div>
             <div class="connector_selector_container">
                 <h1>Select what connector to edit</h1>
@@ -340,6 +340,25 @@
         </div>
         <div class="cable_styling">
             <div class="side_title">Cable Styling </div>
+            <div class="style_scroll">
+                <div class="style_container">
+                    <div class="style_container_header">Cable Length</div>
+                    <div class="length_row" data-length-row="total">
+                        <button class="padlock_btn" data-padlock="total">
+                            <svg id="Padlock_svg" width="28" height="42" viewBox="0 0 28 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g id="Padlock">
+                                <path id="shackle" d="M22 24V9.104C22 3 20.5 2 14.5 2C8.5 2 6 3 6 9.104V15" stroke="black" stroke-width="3"/>
+                                <rect id="lock_body" x="1" y="15" width="26" height="26" rx="7" stroke="black" stroke-width="2"/>
+                                <rect id="keyhole" x="11" y="22" width="6" height="12" rx="3" fill="black"/>
+                                </g>
+                                </svg>
+                        </button>
+                        <label for=""></label>
+                        
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
