--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -345,13 +345,14 @@
                     <div class="style_container_header">Cable Length</div>
                     <div class="length_row" data-length-row="total">
                         <button class="padlock_btn" data-padlock="total">
-                            <svg id="Padlock_svg" width="28" height="42" viewBox="0 0 28 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <g id="Padlock">
-                                <path id="shackle" d="M22 24V9.104C22 3 20.5 2 14.5 2C8.5 2 6 3 6 9.104V15" stroke="black" stroke-width="3"/>
-                                <rect id="lock_body" x="1" y="15" width="26" height="26" rx="7" stroke="black" stroke-width="2"/>
-                                <rect id="keyhole" x="11" y="22" width="6" height="12" rx="3" fill="black"/>
+                            <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g data-padlock-svg="total" class="padlock">
+                                <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
+                                <rect class="lock_body" x="1" y="21" width="26" height="26" rx="7" stroke="black" stroke-width="2"/>
+                                <rect class="keyhole" x="11" y="28" width="6" height="12" rx="3" fill="black"/>
                                 </g>
-                                </svg>
+                            </svg>
+                                
                         </button>
                         <label for=""></label>
                         
