--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -344,7 +344,7 @@
                 <div class="style_container">
                     <div class="style_container_header">Cable Length</div>
                     <div class="length_row" data-length-row="total">
-                        <button class="padlock_btn" data-padlock="total">
+                        <button class="padlock_btn btn_size" data-padlock="total">
                             <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g data-padlock-svg="total" class="padlock">
                                 <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
@@ -354,8 +354,19 @@
                             </svg>
                                 
                         </button>
-                        <label for=""></label>
+                        <div class="length_row_segment">Total Length</div>
+                        <button class="length_btn btn_size">-1ft</button>
+                        <button class="length_btn btn_size">-1in</button>
+                        <div class="length_number_parent">
+                            <div class="length_number">000.0</div>
+                            <div class="length_unit">in</div> 
+                        </div>                  
+                        <button class="length_btn btn_size">+1in</button>
+                        <button class="length_btn btn_size">+1ft</button>
                         
+                    </div>
+                    <div class="length_row_parent" data-length-row="parent">
+
                     </div>
                 </div>
 
