--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -24,7 +24,7 @@
                         <span class="connector_selector_radio">Output A</span>
                     </label>
                     
-                    <label class="connector_selector_radio_container connector_selector_radio_container_hidden" data-selector-container="output_b">
+                    <label class="connector_selector_radio_container flex_hide" data-selector-container="output_b">
                         <input type="radio" name="connector_selector_radio_group" data-selector="output_b"></input>
                         <span class="connector_selector_radio">Output B</span>
                     </label>
@@ -34,7 +34,7 @@
                         <span class="connector_selector_radio">Input A</span>
                     </label>
 
-                    <label class="connector_selector_radio_container connector_selector_radio_container_hidden" data-selector-container="input_b">
+                    <label class="connector_selector_radio_container flex_hide" data-selector-container="input_b">
                         <input type="radio" name="connector_selector_radio_group" data-selector="input_b"></input>
                         <span class="connector_selector_radio">Input B</span>
                     </label>
@@ -365,7 +365,7 @@
                         <button class="length_btn btn_size">+1ft</button>
                         
                     </div>
-                    <div class="length_row_parent" data-length-row="parent">
+                    <div class="length_row_gird" data-length-row="added_connector">
 
                     </div>
                 </div>
