--- a/FrontEndtesting/Slide Bar/sidebar.html
+++ b/FrontEndtesting/Slide Bar/sidebar.html
@@ -59,14 +59,38 @@
     #split_btn{
         border: 2px solid purple;
         background-color: red;
-        border-radius: 20px;
+        border-radius: 25px;
         padding: 5px;
         width: 25%;
         color: white;
         font-size: inherit;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        transform: translateY(-3px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
     }
+    #split_btn:hover {
+        transform: translateY(-1px);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+        
+    }
+    #split_btn:active {
+        box-shadow: none;
+    } 
+    
     #input_total{
         font-size: inherit;
+        background-color: red;
+        border: 2px solid purple;
+        color: white;
+        -webkit-appearance: none;
+        outline: none;
+    }
+    #input_total:focus{
+        box-shadow: 0px 0px 4px 3px purple;
+    }
+    #input_total::-webkit-inner-spin-button,#input_total::-webkit-outer-spin-button{
+        background-color: green;
     }
 
 </style>
