--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -363,7 +363,47 @@
                         </div>
                     </div>
                     <div class="length_row_gird" data-length-row="added_connector">
+                         <div class="length_row" id="input_length_section"> <!--Input section -->
+                            <div class="title_wrapper">
+                                <button class="padlock_btn btn_round" data-padlock="input">
+                                    <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g data-padlock-svg="input" class="padlock">
+                                        <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
+                                        <rect class="lock_body" x="1" y="21" width="26" height="26" rx="7" stroke="black" stroke-width="2"/>
+                                        <rect class="keyhole" x="11" y="28" width="6" height="12" rx="3" fill="black"/>
+                                        </g>
+                                    </svg>       
+                                </button>
+                                <div class="length_row_segment">Input Length - Inches</div>
+                            </div>
+                            <div class="number_wrapper">
+                                <button class="length_btn btn_round">-1ft</button>
+                                <input class="length_number" id="input_total" data-input="total" type="number" min="0" max="100" step="1" value="36">                  
+                                <button class="length_btn btn_round">+1ft</button>
+                            </div>
+                        </div>
+                        <div class="length_row" id="output_length_section"> <!--Output Section-->
+                            <div class="title_wrapper">
+                                <button class="padlock_btn btn_round" data-padlock="output">
+                                    <svg class="Padlock_svg" width="28" height="48" viewBox="0 0 28 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g data-padlock-svg="output" class="padlock">
+                                        <path class="shackle" d="M24 5.5V32.5H19.5V7.99999C19.5 3.99999 8.5 3.99999 8.5 7.99999V14.5C8.5 16 4 16 4 14.5V5.49999C4 -0.500021 24 -0.500008 24 5.5Z" stroke="black" stroke-width="2"/>
+                                        <rect class="lock_body" x="1" y="21" width="26" height="26" rx="7" stroke="black" stroke-width="2"/>
+                                        <rect class="keyhole" x="11" y="28" width="6" height="12" rx="3" fill="black"/>
+                                        </g>
+                                    </svg>       
+                                </button>
+                                <div class="length_row_segment">Output Length - Inches</div>
+                            </div>
+                            <div class="number_wrapper">
+                                <button class="length_btn btn_round">-1ft</button>
+                                <input class="length_number" id="input_total" data-input="total" type="number" min="0" max="100" step="1" value="36">                  
+                                <button class="length_btn btn_round">+1ft</button>
+                            </div>
+                        </div>
+                        <div> <!--Slider Bar-->
 
+                        </div>
                     </div>
                 </div>
 
