--- a/FrontEndtesting/Main front end/index.html
+++ b/FrontEndtesting/Main front end/index.html
@@ -404,6 +404,13 @@
                         <div class="slidebar_wrapper"> <!--Slider Bar-->
                             <input type="range" id="slidebar" name="slidebar" min="0" max="36" step="1" value="0">
                         </div>
+                        <div class="ratio_wrapper">
+                            <button class="ratio_btn" data-ratio_btn="0">0%</button>
+                            <button class="ratio_btn" data-ratio_btn="25">25%</button>
+                            <button class="ratio_btn" data-ratio_btn="50">50%</button>
+                            <button class="ratio_btn" data-ratio_btn="75">75%</button>
+                            <button class="ratio_btn" data-ratio_btn="100">100%</button>
+                        </div>
                     </div>
                 </div>
 
